2006-06-25  rgareus  <robin@gareus.org>
 - updated debian-marillat to debian-multimedia in doc

2006-06-16  rgareus  <robin@gareus.org>
 - updated contrib README and encode.sh

2006-06-13  rgareus  <robin@gareus.org>
 - added jadio to contrib folder.

2006-06-12  rgareus  <robin@gareus.org>
 - smpte support for non-integer fps 
 - '-F <float>' allow to override fps info of file
 - '-K' -> 'old' seek to any frame mode
 - messed up avseek - added support for multi-packet frames.
   urgent TODO: remove all the nasty goto's from the initial example code :-X
   now that seeking is 'known to work' rewrite the whole darn thing and fix
   the dts/pts issues.
   This release is better than the version from June 06 as it fixes a
   possible endless (until EOF) frame seek issue...

2006-06-06  rgareus  <robin@gareus.org>
 - when seeking to non key frames, 
   the video can be decoded starting from the prev keyframe.
 - removed LIBAVCODEC < 4622 backwards seek compat.
 - new valid seekmodes (remote ctrl) are 'key', 'any' and 'continuous' (default).
 - OSD Frame is now the displayed frame, while the SMPTE still corresponds to jack time.  
 - XV,SDL (YUV): added support for video image strides other than XV pitches. 
   eg. if video width is not a multiple of 8 -  prev. versions of xjadeo either crash, or display wrong colors... 
 * version v0.3.13

2006-05-30  rgareus  <robin@gareus.org>
 - proper YV12 and I420 support for XV.
 - SDL 1.2.9 or 1.1.6

2006-05-24  rgareus  <robin@gareus.org>
 - added simple resource config parser.

2006-05-21  rgareus  <robin@gareus.org>
 - minor fixes on the build environement for `make dist` (contrib, qt-gui sources, ..)
 - fixed some typos in yesterdays Makefile.am
 - never ending overkilling docbook
 * version v0.3.12

2006-05-20  rgareus  <robin@gareus.org>
 - added docbook xslt and doc/Makefile...
 - work in progres on the manual.
 - changed Audioframe to videoframe, smpte converstion from floor to rint 